@startuml
'https://plantuml.com/sequence-diagram

class Prenda{
    -tipoPrenda:TipoPrenda
    -colorPrimario: Color
    -colorSecundario:Color
    -material:Material
    -trama:Enum
    +tipoDePrenda()
    +categoria()
    +material()
}

class Borrador{
    -tipoPrenda:TipoPrenda
    -colorPrimario: Color
    -colorSecundario:Color
    -material:Enum
    -trama:Enum
    +especificarTipoPrenda(TipoPrenda)
    +especificarColorPrimerio(ColorPrimerio)
    +especificarColorSecundario(ColorSecundario)
    +especificarTrama(Trama)
    +especificarMaterial(Material)
}

abstract class Sastre{
+fabricarUniforme()

}

class SastreSanjuan{
+fabricarParteSuperior()
+fabricarParteInferior()
+fabricarCalzado()
}

class Uniforme{
-prendaSuperior
-prendaInferior
-prendaCalzado
}

Borrador ...>Prenda
SastreSanjuan ---|>Sastre
Sastre ...>Uniforme
Uniforme --->Prenda
@enduml